# graphpipe

./: CMakeLists.txt  ReadMe.md  test_build.sh
framework/: CMakeLists.txt  ReadMe.md  holder.hpp  packet.h  status.h  threadpool.cpp  threadpool.h  type_map.h  type_util.hpp
test/: CMakeLists.txt  left_right_value.cpp  main.cpp  packet_test.cpp  threadpool_test.cpp
